[package]
edition = "2021"
name    = "blink"
version = "0.1.0"

[[bin]]
name = "blink"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
embedded-graphics = "0.8.1"
esp-backtrace = { version = "0.15.0", features = [
  "esp32c3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32c3", "log"] }
heapless = "0.7"
log = { version = "0.4.21" }
ssd1306 = "0.9.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
