[package]
edition = "2021"
name    = "blink"
version = "0.1.0"

[[bin]]
name = "blink"
path = "./src/bin/main.rs"
test = false
bench = false

[dependencies]
critical-section = "1.2.0"
embedded-graphics = "0.8.1"
heapless = "0.8"
log = { version = "0.4.21" }
ssd1306 = "0.9.0"

[features]
default = []
network = ["dep:esp-wifi", "dep:smoltcp", "dep:embedded-io", "dep:embedded-tls"]

[target.'cfg(target_arch = "riscv32")'.dependencies]
esp-backtrace = { version = "0.15.0", features = [
  "esp32c3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32c3", "log"] }
esp-wifi = { version = "0.12", features = ["esp32c3", "wifi", "smoltcp"], optional = true }
smoltcp = { version = "0.12", default-features = false, features = [
  "socket-tcp",
  "socket-udp",
  "socket-dhcpv4",
  "socket-dns",
  "proto-ipv4",
  "proto-dhcpv4",
  "proto-dns",
  "medium-ethernet",
], optional = true }
embedded-io = { version = "0.7", optional = true }
embedded-tls = { version = "0.19", default-features = false, optional = true }
esp-alloc = "0.6"
rand_core = { version = "0.6", default-features = false }
portable-atomic = { version = "1", default-features = false }
managed = { version = "0.8", default-features = false }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = "s"
overflow-checks  = false
